News
====

Pyclewn 2.3
-----------

.. March 23, 2016

New feature
^^^^^^^^^^^

* A dynamic watch variable, for example an STL container, is now displayed
  using the enabled gdb pretty printers.

Changes
^^^^^^^

* Line numbers are included in the backtrace window, except at the top level
  frame (to avoid screen blinks when stepping). Breakpoint conditions are
  listed in the breakpoint window.

Bug fixes
^^^^^^^^^

* Issue #41: Fix the 'define', 'commands' and 'document' gdb commands
  (regression).

* Issue #42: The 'python' gdb command can also be used now as a multi-line
  command.

* Issue #43: The 'shell' gdb command is an illegal command as already stated
  in the documentation.

* Fix the following exception upon starting with python3.6:
  ``in create_server: sock.bind(sa): TypeError: an integer is required (got
  type str)``.

* Issue #46: Fix an exception caused by the incorrect parsing of the output of
  the ``-thread-info`` gdb/mi command.

* Issue #47: Loading the list of source file names may be very slow for large
  libraries with debugging symbols. Only load the list of source file names
  upon running a ``file``-like gdb command or when a library is being loaded.
  Previously, this list was instead loaded on ``file``-like and ``break``-like
  gdb commands.

* Issue #48: Fix a vim keymap error when the command prefix has been set to
  another value that the default ``C``.

* Issue #50: The breakpoint and backtrace windows always print now the source
  file basename followed by the absolute pathname in angle brackets.

Pyclewn 2.2
-----------

.. November 28, 2015

Bug fixes
^^^^^^^^^

* Issue #25: Print the return value when the inferior stops after 'finish'.

* Issue #26: Fix Pyclewn failure to start when gdb is configured with
  ``enable-targets=all``.

* Issue #27: File name completion is now available before gdb has been
  started. This fixes a regression introduced in 2.1 by the full gdb
  completion feature.
